<resources>
    <string name="app_name">RapidRescue</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="add_number_string">Add Number</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="add_string">Add</string>
    <string name="emergency_numbers_string">Emergency Numbers</string>
    <string name="name_string">Name</string>
    <string name="phone_number_string">Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_number">Add Number</string>
    <string name="Profile">Profile</string>
    <string name="chatbot">Chatbot</string>
    <string name="chatbot_">ChatBot</string>
    <string name="developers">{/Developers}</string>
    <string name="dev">Developers</string>
    <string name="settings">Settings</string>
    <string name="panic_button">Panic Button</string>
    <string name="rate_us">Rate us</string>

    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="phone_number_in_10_digits_without_any_spaces">Phone Number(in 10 digits without any spaces)</string>
</resources>