<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <View android:id="@+id/_bg__android_large___4"
                android:background="@drawable/_bg__android_large___4_shape"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="wrap_content"
                android:layout_height="800dp" />


            <RelativeLayout android:id="@+id/frame_12"
                android:layout_marginTop="22dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <View android:id="@+id/_bg__frame_12_ek1"
                    android:background="@drawable/_bg__frame_12_ek1_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


                <RelativeLayout android:id="@+id/frame_1"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View android:id="@+id/_bg__frame_1_ek1"
                        android:background="@drawable/_bg__frame_1_ek1_shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="93dp" />


                    <RelativeLayout android:id="@+id/frame_2"
                        android:layout_marginTop="25dp"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <View android:id="@+id/_bg__frame_2_ek1"
                            android:background="@drawable/_bg__frame_2_ek1_shape"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="0dp"
                            android:layout_width="185dp"
                            android:layout_height="43dp" />

                        <TextView android:id="@+id/add"
                            android:textSize="14sp"
                            android:textColor="@color/add_color"
                            android:gravity="center"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="0dp"
                            android:layout_width="40.4dp"
                            android:layout_height="21.4dp"
                            android:text="@string/add_string"
                            />

                        <TextView android:id="@+id/emergency_numbers"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:textColor="@color/teal_200"
                            android:gravity="center"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="21dp"
                            android:layout_width="200.8dp"
                            android:layout_height="27.8dp"
                            android:text="@string/emergency_numbers_string"
                            />

                    </RelativeLayout>

                </RelativeLayout>


                <RelativeLayout android:id="@+id/frame_13"
                    android:layout_marginTop="128dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/_bg__frame_13_ek1"
                        android:background="@drawable/_bg__frame_13_ek1_shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="231dp" />


                    <RelativeLayout android:id="@+id/frame_2_ek2"
                        android:layout_marginTop="0dp"
                        android:layout_marginStart="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <View android:id="@+id/_bg__frame_2_ek3"
                            android:background="@drawable/_bg__frame_2_ek3_shape"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="0dp"
                            android:layout_width="wrap_content"
                            android:layout_height="67dp" />


                        <RelativeLayout android:id="@+id/frame_2_ek4"
                            android:layout_marginTop="25dp"
                            android:layout_marginStart="25dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >

                            <View   android:id="@+id/_bg__frame_2_ek5"
                                android:background="@drawable/_bg__frame_2_ek5_shape"
                                android:layout_marginStart="0dp"
                                android:layout_marginTop="0dp"
                                android:layout_width="39dp"
                                android:layout_height="17dp" />

                            <EditText
                                android:id="@+id/name"
                                android:textSize="14sp"
                                android:textColor="@color/add_color"
                                android:layout_marginStart="0dp"
                                android:layout_marginTop="0dp"
                                android:layout_width="wrap_content"
                                android:layout_height="21.4dp"
                                android:hint="@string/name_string"
                                android:textColorHint="@color/white"
                                android:inputType="text"
                                />

                        </RelativeLayout>

                    </RelativeLayout>


                    <RelativeLayout android:id="@+id/frame_4"
                        android:layout_marginTop="82dp"
                        android:layout_marginStart="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <View   android:id="@+id/_bg__frame_4_ek1"
                            android:background="@drawable/_bg__frame_4_ek1_shape"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="0dp"
                            android:layout_width="wrap_content"
                            android:layout_height="67dp" />


                        <RelativeLayout android:id="@+id/frame_2_ek6"
                            android:layout_marginTop="25dp"
                            android:layout_marginStart="25dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >

                            <EditText
                                android:id="@+id/phone_number"
                                android:textSize="14sp"
                                android:textColor="@color/black"
                                android:textColorHint="@color/white"
                                android:layout_marginStart="0dp"
                                android:layout_marginTop="0dp"
                                android:layout_width="wrap_content"
                                android:layout_height="21.4dp"
                                android:hint="@string/phone_number_string"
                                android:inputType="phone"
                                />

                            <View   android:id="@+id/_bg__frame_2_ek7"
                                android:background="@drawable/_bg__frame_2_ek7_shape"
                                android:layout_marginStart="0dp"
                                android:layout_marginTop="0dp"
                                android:layout_width="99dp"
                                android:layout_height="17dp" />



                        </RelativeLayout>

                    </RelativeLayout>


                    <RelativeLayout android:id="@+id/frame_3"
                        android:layout_marginTop="164dp"
                        android:layout_marginStart="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <View   android:id="@+id/_bg__frame_3_ek1"
                            android:background="@drawable/_bg__frame_3_ek1_shape"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="0dp"
                            android:layout_width="wrap_content"
                            android:layout_height="67dp" />


                        <RelativeLayout android:id="@+id/frame_2_ek8"
                            android:layout_marginTop="25dp"
                            android:layout_marginStart="127dp"
                            android:layout_centerHorizontal="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            >

                            <View android:id="@+id/_bg__frame_2_ek9"
                                android:background="@drawable/_bg__frame_2_ek9_shape"
                                android:layout_marginTop="0dp"
                                android:layout_centerHorizontal="true"
                                android:layout_width="86dp"
                                android:layout_height="17dp" />

                        </RelativeLayout>

                        <Button
                            android:id="@+id/uploadButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:backgroundTint="@color/teal_200"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:onClick="onClickUpload"
                            android:text="Upload Data" />

                    </RelativeLayout>

                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>